umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@jmol_co-4-cp-4.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C20H20Co4
    atom_count: 44
    bond_count: 66
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C20H20Co4
    atom_count: 44
    bond_count: 66
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C20H20Co4
    atom_count: 44
    bond_count: 66
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C20H20Co4
    atom_count: 44
    bond_count: 66
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
